crates/lang/macro/tests/ui/trait_def/fail/with_assoc_const.rs
use ink_lang as ink;

#[ink::trait_definition]
pub trait WithAssocType {
    const INVALID_CONST: bool;

    #[ink(message)]
    fn message(&self);
}

fn main() {}
